# BachelorProject

./: DFTvsPETMAD.csv  MATTERNvsRBF.csv  ReadFile.py  ReadFile2.py  StandardBO.csv  UCBvsLOGEI.csv  example.py  mean_module_repulsion.csv  output_no_pen.csv  output_pen.csv  pyproject.toml  qLCB.csv
